keep h1 styles for h2 elements on home page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <html lang="en">
 {% include head.html %}
 
-<body>
+<body class="{% if page.id %}page-{{ page.id }}{% endif %}">
 {% include notification.html %}
 {% if page.id == 'home' %}
   {% include banner.html %}
