--- a/_sass/common/_headline.scss
+++ b/_sass/common/_headline.scss
@@ -116,6 +116,13 @@
       line-height: 44px;
     }
 
+    .page-home & {
+      h2 {
+        font-size: 78px;
+        line-height: 72px;
+      }
+    }
+
   }
 
 
