--- a/_includes/world/2025/homepage_sections/speaker_carousel.html
+++ b/_includes/world/2025/homepage_sections/speaker_carousel.html
@@ -1,4 +1,5 @@
-{% assign sorted_speakers = site.world_speakers | where_exp: 'item', 'item.path contains "2025"' | sort: 'last_name' %}
+{% assign keynote_speakers = site.world_speakers | where_exp: 'item', 'item.path contains "2025"' | where: 'keynote', true | sort: 'first_name' %}
+{% assign sorted_speakers = site.world_speakers | where_exp: 'item', 'item.path contains "2025"' | where: 'keynote', false | sort: 'first_name' %}
 
 <div class="section speakers-container title-center">
   <h2>This year's speakers</h2>
@@ -8,6 +9,18 @@
 
     <div class="carousel-wrapper">
       <div class="speaker-carousel">
+        {% for speaker in keynote_speakers %}
+          {%
+          include world/2025/components/speaker_card.html
+          first_name=speaker.first_name
+          last_name=speaker.last_name
+          tagline=speaker.tagline
+          company=speaker.company
+          photo=speaker.image_path
+          path=speaker.path
+          %}
+        {% endfor %}
+
         {% for speaker in sorted_speakers %}
           {%
           include world/2025/components/speaker_card.html
