fix carrousel - go back to beginning when we reach the end

--- a/_includes/world/2025/components/speaker_card.html
+++ b/_includes/world/2025/components/speaker_card.html
@@ -12,7 +12,7 @@
       </div>
 
       <div class="info-container">
-        <div class="info title">
+        <div class="info">
           <h3>{{ include.first_name }} {{ include.last_name }}</h3>
         </div>
 
