--- a/_includes/world/2025/components/session_card.html
+++ b/_includes/world/2025/components/session_card.html
@@ -1,48 +1,26 @@
 {% assign speaker_url = include.speaker.path | split: '/' | last | remove_first: '.md' %}
 {% assign session = include.session %}
 
-{% if session.time != blank and session.session_date != blank and session.location != blank %}
-{% assign hasInfo = true %}
-{% else %}
-{% assign hasInfo = false %}
-{% endif %}
-
-{% if hasInfo %}
-{% assign className = "sessionCard" %}
-{% else %}
-{% assign className = "sessionCard noInfo" %}
-{% endif %}
-
-{% assign url_segments = include.session.url | split: '/' %}
-{% assign day_segment = "" %}
-
-{% for segment in url_segments %}
-{% if segment contains "day-" %}
-{% assign day_segment = segment %}
-{% endif %}
-{% endfor %}
-
 {% assign clean_path = session.path | replace: '_world_sessions/2025', '' | replace: '.md', '' %}
 
-<div class="session-card"
-     title="{{ session.title }}"
-     aria-label="Go to {{ session.title }} session page"
-     onclick="openWindow( '/world/2025{{ clean_path }}')"
-     onkeydown="handleEnterOrSpaceWindowOpen(event, '/world/2025{{ clean_path }}')">
+<div  class="session-card"
+      title="{{ session.title }}"
+      aria-label="Go to {{ session.title }} session page"
+      onclick="openWindow( '/world/2025{{ clean_path }}')"
+      onkeydown="handleEnterOrSpaceWindowOpen(event, '/world/2025{{ clean_path }}')">
   <h3>{{ session.title }}</h3>
   <p>{{ include.speaker.first_name }} {{ include.speaker.last_name }} - {{ include.speaker.tagline }}{% if include.speaker.company %}, {{ include.speaker.company }} {% endif %}</p>
 </div>
 
 <script>
-  function openWindow(url, openTab = false) {
-      const openType = openTab ? '_blank' : '_self';
-
-      window.open(url, openType);
+  openWindow = (url, openTab = false) =>{
+    const openType = openTab ? '_blank' : '_self';
+    window.open(url, openType);
   }
 
-  function handleEnterOrSpaceWindowOpen(e, url) {
-      if (e.key === " " || e.key === "Enter" || e.key === "Spacebar") {
-          openWindow(url);
-      }
+  handleEnterOrSpaceWindowOpen = (e, url) => {
+    if (e.key === " " || e.key === "Enter" || e.key === "Spacebar") {
+        openWindow(url);
+    }
   }
 </script>
