--- a/_sass/world/2025/modules/_speaker_show.scss
+++ b/_sass/world/2025/modules/_speaker_show.scss
@@ -60,6 +60,7 @@
   h3 {
     font-size: $x-large;
     font-variation-settings: $font-weight-700;
+    line-height: 35px;
   }
 
   .hexagon-frame {
