--- a/_sass/modules/_post.scss
+++ b/_sass/modules/_post.scss
@@ -13,10 +13,19 @@
     text-align: center;
 
     h1 {
-      font-size: 55px;
-      line-height: 52px;
+      color: $color-red;
+      font-size: 39px;
+      @media (max-width: 800px) {
+        font-size: 32px;
+      }
+      @media (max-width: 600px) {
+        font-size: 28px;
+      }
+      font-weight: 700;
+      letter-spacing: -0.01em;
+      line-height: 38px;
     }
-
+    
     h5 {
       margin-bottom: 16px;
     }
