RW25 - Second phase - Speakers & Sessions (#495)
* add speaker cards to the homepage

* speaker carousel on homepage

* responsive speaker carousel

* speaker index and show page - wip

* fix speaker index and cards

* speaker show page responsiveness wip

* add session cards

* add 2025 speakers

* use 2025 layout for all speakers

* add speaker sessions

* fix session date

* style session page

* fix responsiveness

* update speakers info

* sort speakers

* fix carrousel - go back to beginning when we reach the end

* put back speaker card 2024 as it was

* put back speaker card 2024 as it was

* clean code

* add role and company to speaker show page

* front-end fixes

* remove speaker image from sponsor folder

--- a/_sass/world/2025/common/_hexagon_frame.scss
+++ b/_sass/world/2025/common/_hexagon_frame.scss
@@ -1,7 +1,17 @@
 .hexagon-frame {
   position: relative;
-  width: 260px;
-  height: 280px;
+  width: 220px;
+  height: 240px;
+
+  @include media(MobileScreens) {
+    width: 160px;
+    height: 180px;
+  }
+
+  @include media(MobileScreens) {
+    width: 200px;
+    height: 220px;
+  }
 
   img {
     width: 100%;
