--- a/assets/css/world-2025.scss
+++ b/assets/css/world-2025.scss
@@ -25,4 +25,10 @@
 @import "world/2025/modules/image_carousel";
 @import "world/2025/modules/legal";
 @import "world/2025/modules/navbar";
+@import "world/2025/modules/session_card";
+@import "world/2025/modules/session_page";
+@import "world/2025/modules/speaker_card";
+@import "world/2025/modules/speaker_carousel";
+@import "world/2025/modules/speaker_index";
+@import "world/2025/modules/speaker_show";
 @import "world/2025/modules/rails_at_scale";
