--- a/_layouts/world/2025/speaker.html
+++ b/_layouts/world/2025/speaker.html
@@ -43,7 +43,7 @@ layout: world/2025/default
 
   {% if speakerSessions.size > 0 %}
     <div class="speaker-sessions">
-      <h2>Sessions by this speaker</h2>
+      <h2>Session</h2>
 
       <div class="sessions-container">
         {% for session in speakerSessions %}
