--- a/_includes/world/2025/homepage_sections/speaker_carousel.html
+++ b/_includes/world/2025/homepage_sections/speaker_carousel.html
@@ -39,7 +39,7 @@
   </div>
 
   <div class="button-center">
-    <a href="/world/2025/speakers" class="button-primary"><span>Go to speaker showcase</span></a>
+    <a href="/world/2025/speakers" class="button-primary"><span>View all speakers</span></a>
   </div>
 </div>
 
