--- a/_sass/common/_headline.scss
+++ b/_sass/common/_headline.scss
@@ -118,8 +118,11 @@
 
     .page-home & {
       h2 {
-        font-size: 78px;
-        line-height: 72px;
+        color: $color-red;
+        font-size: 47px;
+        font-weight: 700;
+        letter-spacing: -0.01em;
+        line-height: 43px;
       }
     }
 
