--- a/_sass/common/_headline.scss
+++ b/_sass/common/_headline.scss
@@ -34,7 +34,7 @@
     line-height: 34px;
   }
 
-  h4 {
+  h4, p {
 
     color: $color-black;
     font-size: 26px;
@@ -110,14 +110,10 @@
       line-height: 43px;
     }
 
-    h4 {
+    h4, p {
       font-size: 39px;
       letter-spacing: -0.01em;
       line-height: 44px;
     }
-
   }
-
-
-
 }
