--- a/_sass/modules/_heading.scss
+++ b/_sass/modules/_heading.scss
@@ -26,7 +26,7 @@
       padding-bottom: 3px;
     }
 
-    h4 {
+    h4, p {
       padding-top: 17px;
     }
 
@@ -166,10 +166,9 @@
         padding-top: 4px;
       }
 
-      h4 {
+      h4, p {
         padding-top: 20px;
       }
-
     }
 
     &__button {
