--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,5 +1,5 @@
 <div class="blog__post">
-  <h6>{{ post.date | date: '%B %-d, %Y' }}</h6>
+  <p>{{ post.date | date: '%B %-d, %Y' }}</p>
 
   <dl>
     <dt><a href="{{ post.url }}">{{ post.title | strip_html }}</a></dt>
