--- a/_sass/modules/_blog.scss
+++ b/_sass/modules/_blog.scss
@@ -31,7 +31,7 @@
     border-top: 3px solid rgba($color-black, 0.1);
     padding-top: 30px;
 
-    h6 {
+    p {
       font-size: 21px;
       font-weight: 600;
       letter-spacing: -0.006em;
@@ -44,7 +44,7 @@
       margin-bottom: -6px;
       margin-top: 1px;
 
-      dt {
+      h3 {
 
         color: $color-black;
         font-size: 31px;
@@ -117,7 +117,7 @@
       gap: 30px;
       padding-top: 40px;
 
-      h6 {
+      p {
         flex: 1;
         margin-top: -1px;
       }
