--- a/_sass/common/_headline.scss
+++ b/_sass/common/_headline.scss
@@ -63,6 +63,16 @@
     line-height: 26px;
   }
 
+  .page-home & {
+    h2 {
+      color: $color-red;
+      font-size: 47px;
+      font-weight: 700;
+      letter-spacing: -0.01em;
+      line-height: 43px;
+    }
+  }
+
   a {
 
     color: $color-black;
@@ -87,8 +97,6 @@
     font-style: italic;
     font-weight: 600;
   }
-
-
 
   @media(min-width: 1024px) {
 
@@ -118,11 +126,8 @@
 
     .page-home & {
       h2 {
-        color: $color-red;
-        font-size: 47px;
-        font-weight: 700;
-        letter-spacing: -0.01em;
-        line-height: 43px;
+        font-size: 78px;
+        line-height: 72px;
       }
     }
 
