fix: use latest release of turbo using a cdn bundler

--- a/_includes/world/2025/head.html
+++ b/_includes/world/2025/head.html
@@ -62,7 +62,7 @@
   <script src="/assets/world/2023/scripts/modal_component.js" defer></script>
 
   <script type="module">
-    import hotwiredTurbo from 'https://cdn.skypack.dev/@hotwired/turbo';
+    import hotwiredTurbo from "https://cdn.jsdelivr.net/npm/@hotwired/turbo@latest/dist/turbo.es2017-esm.min.js";
   </script>
 
   <script type="text/javascript">
