--- a/_sass/modules/_post.scss
+++ b/_sass/modules/_post.scss
@@ -115,6 +115,11 @@
 
       margin-bottom: -7px;
 
+      h1 {
+        font-size: 55px;
+        line-height: 52px;
+      }
+
       h5 {
         margin-bottom: 13px;
       }
