--- a/assets/css/world-2025.scss
+++ b/assets/css/world-2025.scss
@@ -17,6 +17,7 @@
 @import 'world/2025/common/hexagon_frame';
 @import 'world/2025/common/social_card';
 
+@import 'world/2025/modules/agenda_page';
 @import 'world/2025/modules/announcement_banner';
 @import 'world/2025/modules/faq';
 @import 'world/2025/modules/footer';
