add time to session card

--- a/_includes/world/2025/components/agenda_tabs.html
+++ b/_includes/world/2025/components/agenda_tabs.html
@@ -3,7 +3,7 @@
        role="button"
        tabindex="0"
        title="Day One"
-        aria-label="View day one agenda"
+       aria-label="View day one agenda">
     <p>Day 1</p>
   </div>
 
@@ -11,7 +11,7 @@
        role="button"
        tabindex="0"
        title="Day Two"
-        aria-label="View day two agenda">
+       aria-label="View day two agenda">
     <p>Day 2</p>
   </div>
 </div>
