--- a/_includes/world/2025/components/session_card.html
+++ b/_includes/world/2025/components/session_card.html
@@ -1,6 +1,5 @@
 {% assign speaker_url = include.speaker.path | split: '/' | last | remove_first: '.md' %}
 {% assign session = include.session %}
-
 {% assign clean_path = session.path | replace: '_world_sessions/2025', '' | replace: '.md', '' %}
 
 <div  class="session-card"
@@ -8,14 +7,18 @@
       aria-label="Go to {{ session.title }} session page"
       onclick="openWindow( '/world/2025{{ clean_path }}')"
       onkeydown="handleEnterOrSpaceWindowOpen(event, '/world/2025{{ clean_path }}')">
-  <h3>{{ session.title }}</h3>
-  <p>{{ include.speaker.first_name }} {{ include.speaker.last_name }} - {{ include.speaker.tagline }}{% if include.speaker.company %}, {{ include.speaker.company }} {% endif %}</p>
+
+  <p class="time">{{session.time}}</p>
+
+  <div class="content">
+    <h3>{{ session.title }}</h3>
+    <p>{{ include.speaker.first_name }} {{ include.speaker.last_name }} - {{ include.speaker.tagline }}{% if include.speaker.company %}, {{ include.speaker.company }} {% endif %}</p>
+  </div>
 </div>
 
 <script>
-  openWindow = (url, openTab = false) =>{
-    const openType = openTab ? '_blank' : '_self';
-    window.open(url, openType);
+  openWindow = (url) =>{
+    window.open(url);
   }
 
   handleEnterOrSpaceWindowOpen = (e, url) => {
