--- a/_sass/world/2025/modules/_session_card.scss
+++ b/_sass/world/2025/modules/_session_card.scss
@@ -1,24 +1,57 @@
 .session-card {
+  display: flex;
+  align-items: center;
+  gap: 70px;
   cursor: pointer;
   position: relative;
   width: 100%;
   padding: 20px 25px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
   background-image: $session-card-gradient;
   transition: background 0.6s ease-in;
 
   @include media(MobileScreens) {
-    gap: 10px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
     padding: 25px;
     width: fit-content;
+  }
+
+  .time {
+    width: 150px;
+    padding-right: 50px;
+    border-right: 1px solid white;
+    font-variation-settings: $font-weight-800-basic;
+    font-size: 22px;
+
+    @include media(MobileScreens) {
+      width: fit-content;
+      border-right: none;
+      padding-right: 0;
+      font-size: 16px;;
+    }
+
+    @include media(TabletScreens) {
+      padding-right: 20px;
+    }
+
+  }
+
+  .content {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+
+    @include media(MobileScreens) {
+      gap: 10px;
+    }
   }
 
   h3 {
     font-size: $x-large;
     font-variation-settings: $font-weight-700;
     line-height: 45px;
+    margin-bottom: 0;
 
     @include media(MobileScreens) {
       font-size: 18px;
