--- a/_sass/world/2025/modules/_session_card.scss
+++ b/_sass/world/2025/modules/_session_card.scss
@@ -9,6 +9,10 @@
   background-image: $session-card-gradient;
   transition: background 0.6s ease-in;
 
+  &.no-pointer {
+    cursor: default;
+  }
+
   @include media(MobileAndTabletScreens) {
     flex-direction: column;
     align-items: flex-start;
