--- a/assets/css/world-2025.scss
+++ b/assets/css/world-2025.scss
@@ -18,6 +18,7 @@
 @import 'world/2025/common/social_card';
 
 @import 'world/2025/modules/agenda_page';
+@import 'world/2025/modules/agenda_tabs';
 @import 'world/2025/modules/announcement_banner';
 @import 'world/2025/modules/faq';
 @import 'world/2025/modules/footer';
