--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,7 +1,7 @@
 <div class="banner text--align-center">
   <p>
-    <a class="common-button--text" href="https://rubyonrails.org/world/2025" target="_blank">
-      [Rails World 2025 is sold out] See you in Amsterdam!
+    <a class="common-button--text" href="https://rubyonrails.org/2025/6/25/on-rails-podcast" target="_blank">
+      Subscribe to 'On Rails', a new podcast hosted by Robby Russell, produced by the Rails Foundation.
     </a>
   </p>
 </div>
