--- a/_sass/modules/_docs.scss
+++ b/_sass/modules/_docs.scss
@@ -1,6 +1,15 @@
 .docs {
   &.heading {
     padding-bottom: 0;
+
+    .breadcrumb {
+      margin-bottom: 1rem;
+      a {
+        color: $color-red;
+        text-decoration: none;
+        text-transform: uppercase;
+      }
+    }
     h1 {
       br {
         display: none;
@@ -55,17 +64,27 @@
     max-height: 200px !important;
   }
 
-  // UL/LIs here are for cards, no bullets actually used. 
+  .card__fullwidth .card {
+    max-height: 500px !important;
+  }
+
+  // UL/LIs here are for cards, no bullets actually used.
   ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
+    &.learning-cards,
+    &.use-rails,
+    &.case-studies {
+      list-style-type: none;
+      padding: 0;
+      margin: 0;
 
-    li {
-      margin-bottom: 1em;
-    } // li
+      li {
+        margin-bottom: 1em;
+      } // li
+    }
 
-    &.learning-cards, &.use-rails, &.case-studies {
+    &.learning-cards,
+    &.use-rails,
+    &.case-studies {
       display: flex;
       flex-direction: column;
       flex-wrap: wrap;
@@ -76,7 +95,7 @@
         margin-bottom: 0;
       } // li
     } // &.learning-cards
-    
+
     &.learning-cards {
       li {
         img {
@@ -88,45 +107,82 @@
           background-position: right top;
           background-size: contain;
         }
-        
+
         &#install h4 {
-          background-image: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 75%, rgba(255,255,255,0) 100%), 
-                    url("/assets/images/docs-banner-installation.svg");
+          background-image:
+            linear-gradient(
+              90deg,
+              rgba(255, 255, 255, 1) 0%,
+              rgba(255, 255, 255, 1) 75%,
+              rgba(255, 255, 255, 0) 100%
+            ),
+            url("/assets/images/docs-banner-installation.svg");
         }
 
         &#tutorial h4 {
-          background-image: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 75%, rgba(255,255,255,0) 100%), 
-                    url("/assets/images/docs-banner-tutorial.svg");
+          background-image:
+            linear-gradient(
+              90deg,
+              rgba(255, 255, 255, 1) 0%,
+              rgba(255, 255, 255, 1) 75%,
+              rgba(255, 255, 255, 0) 100%
+            ),
+            url("/assets/images/docs-banner-tutorial.svg");
         }
 
         &#guides h4 {
-          background-image: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 75%, rgba(255,255,255,0) 100%), 
-                    url("/assets/images/docs-banner-guides.svg");
+          background-image:
+            linear-gradient(
+              90deg,
+              rgba(255, 255, 255, 1) 0%,
+              rgba(255, 255, 255, 1) 75%,
+              rgba(255, 255, 255, 0) 100%
+            ),
+            url("/assets/images/docs-banner-guides.svg");
         }
 
         &#api h4 {
-          background-image: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 75%, rgba(255,255,255,0) 100%), 
-                    url("/assets/images/docs-banner-api.svg");
+          background-image:
+            linear-gradient(
+              90deg,
+              rgba(255, 255, 255, 1) 0%,
+              rgba(255, 255, 255, 1) 75%,
+              rgba(255, 255, 255, 0) 100%
+            ),
+            url("/assets/images/docs-banner-api.svg");
         }
 
         &#forum h4 {
-          background-image: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 75%, rgba(255,255,255,0) 100%), 
-                    url("/assets/images/docs-banner-forum.svg");
+          background-image:
+            linear-gradient(
+              90deg,
+              rgba(255, 255, 255, 1) 0%,
+              rgba(255, 255, 255, 1) 75%,
+              rgba(255, 255, 255, 0) 100%
+            ),
+            url("/assets/images/docs-banner-forum.svg");
         }
 
         &#contribute h4 {
-          background-image: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 75%, rgba(255,255,255,0) 100%), 
-                    url("/assets/images/docs-banner-contribute.svg");
+          background-image:
+            linear-gradient(
+              90deg,
+              rgba(255, 255, 255, 1) 0%,
+              rgba(255, 255, 255, 1) 75%,
+              rgba(255, 255, 255, 0) 100%
+            ),
+            url("/assets/images/docs-banner-contribute.svg");
         }
       }
-      
+
       li h4 {
         margin-bottom: 0.5em;
         padding: 0;
       }
     } // &.learning-cards
 
-    &.use-rails, &.case-studies {
+    &.use-rails,
+    &.case-studies {
       flex-direction: row;
       li {
         flex-basis: 48%;
@@ -169,18 +225,19 @@
       b {
         font-weight: bold;
       } // b
-      
+
       cite {
         display: block;
         font-size: 18px;
-
       } // cite
     } // blockquote
 
     .casestudy__floater {
       background: $color-white;
       border-radius: 12px;
-      box-shadow: 0 15px 40px 5px rgba($color-black, 0.15), 0 1px 1px rgba($color-black, 0.04);
+      box-shadow:
+        0 15px 40px 5px rgba($color-black, 0.15),
+        0 1px 1px rgba($color-black, 0.04);
       display: flex;
       margin-left: 30px;
       margin-right: 30px;
@@ -199,7 +256,7 @@
     } // .casestudy__image
 
     .casestudy__quote {
-      flex-direction: column; 
+      flex-direction: column;
       align-items: center;
       padding: 40px;
       text-align: center;
@@ -211,7 +268,7 @@
         margin-bottom: 1em;
         max-width: 160px;
       } // img
-        
+
       &.no_image blockquote {
         text-align: center;
       }
@@ -219,7 +276,7 @@
 
     &.keytakeaways {
       .text__body {
-        background-color: #F1F3F5;
+        background-color: #f1f3f5;
         border: 1px solid #cc0000;
         border-radius: 12px;
         padding: 40px;
@@ -264,7 +321,7 @@
 
 @media (min-width: 1024px) {
   .docs {
-    &.heading { 
+    &.heading {
       h1 {
         br {
           display: block;
@@ -273,17 +330,15 @@
     } // &.heading
 
     &.casestudy {
-      overflow: visible; 
-      
+      overflow: visible;
+
       &.text {
         max-width: 840px;
         margin: 0 auto;
       }
 
       blockquote {
-
         &.inline-quote {
-          
           &.float-left {
             float: left;
             margin: 0 1em 0 -150px;
@@ -301,7 +356,9 @@
           font-size: 24px;
           text-align: right;
 
-          br { display: none;}
+          br {
+            display: none;
+          }
         } // cite
       } // blockquote
 
@@ -310,11 +367,11 @@
         flex-direction: row;
         justify-content: center;
         text-align: left;
-  
+
         img {
           margin-right: 1em;
         }
-  
+
         blockquote {
           flex-basis: auto;
           font-size: 30px;
@@ -337,16 +394,28 @@
         } // .button
       } // &.cta
     } // .casestudy
+
+    .container {
+      > h2 {
+        font-size: 39px;
+      }
+      > p {
+        font-size: 26px;
+      }
+    }
   } // .docs
 
   .text {
     ul {
-      &.learning-cards, &.use-rails, &.case-studies {
-        display: flex; 
+      &.learning-cards,
+      &.use-rails,
+      &.case-studies {
+        display: flex;
         flex-direction: row;
       } // &.learning-cards, &.use-rails, &.case-studies
 
-      &.learning-cards, &.case-studies {
+      &.learning-cards,
+      &.case-studies {
         li {
           flex-basis: 32%;
           width: 32%;
