--- a/_layouts/world/2025/session.html
+++ b/_layouts/world/2025/session.html
@@ -5,10 +5,27 @@ layout: world/2025/default
 {% assign filteredSpeakers = site.world_speakers | where_exp:"speaker", "speaker.path contains page.speaker" | where_exp: 'item', 'item.path contains "2025"' %}
 {% assign speaker = filteredSpeakers | first %}
 
+{% if page.location == "Effectenbeurs" %}
+  {% assign track = "Track 1" %}
+{% else %}
+  {% assign track = "Track 2" %}
+{% endif %}
+
+{% if page.path contains 'day-1/' %}
+  {% assign day = 'Thursday September 4' %}
+{% elsif page.path contains 'day-2/' %}
+  {% assign day = 'Friday September 5' %}
+{% endif %}
+
 <div class="session-page">
   <div class="session-content">
     <h1>{{ page.title }}</h1>
     <p>{{ content }}</p>
+
+    <div class="session-details">
+      <img class="" width="40" src="/assets/world/2025/icons/clock.svg" alt="clock icon">
+      <p> {{ day }} / {{ page.time }} / {{ track }}</p>
+    </div>
   </div>
 
   <div>
