--- a/_sass/world/2025/modules/_session_page.scss
+++ b/_sass/world/2025/modules/_session_page.scss
@@ -49,3 +49,16 @@
     margin-top: 100px;
   }
 }
+
+.session-page .session-details {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-top: 20px;
+
+  p {
+    color: $pink;
+    font-size: $x-large;
+    font-variation-settings: $font-weight-700;
+  }
+}
