--- a/_sass/world/2025/modules/_session_page.scss
+++ b/_sass/world/2025/modules/_session_page.scss
@@ -57,7 +57,7 @@
   margin-top: 20px;
 
   p {
-    color: $pink;
+    color: white;
     font-size: $x-large;
     font-variation-settings: $font-weight-700;
   }
