--- a/_includes/world/2025/components/agenda_header.html
+++ b/_includes/world/2025/components/agenda_header.html
@@ -3,7 +3,7 @@
     <h1>Rails World 2025</h1>
     <h2>Official Agenda</h2>
     <p class="larger">
-      When we say there’s something for everyone... <span class="bold">we mean it</span>. Here’s the full breakdown so you can plan your Rails World 2025 experience.
+      Here are the talks coming to the two Rails World stages. Registered attendees will be sent a link to the Rails World 2025 app with more detailed times and locations.
     </p>
   </div>
 
