--- a/_includes/world/2025/homepage_sections/sponsors.html
+++ b/_includes/world/2025/homepage_sections/sponsors.html
@@ -1,15 +1,13 @@
 <div class="section full-height mobile-fit-content">
   <div class="sponsor-intro-container">
-    <h2 class="large-title">Sponsor Rails World</h2>
+    <h2 class="large-title">Thank you sponsors!</h2>
 
     <div class="content">
       <div></div>
       <div>
         <p class="larger">
-          Sponsoring Rails World means showcasing your brand to a  <span class="bold">global audience of Rails enthusiasts</span>, developers, and maintainers.
-          Get in touch and help make Rails World an unforgettable experience for all.
+          Below are all of the companies who are bringing Rails World to life this year for a <span class="bold">global audience of Rails enthusiasts</span>, developers, and maintainers.
         </p>
-        <a href="https://public.3.basecamp.com/p/KZTZxpc6BVtMSH9Vv4PWAMN9" class="button-secondary" target="_blank"><span>View prospectus</span></a>
       </div>
     </div>
   </div>
