--- a/_sass/modules/_cards.scss
+++ b/_sass/modules/_cards.scss
@@ -1,11 +1,26 @@
 .cards {
-
   font-size: 0;
   line-height: 0;
   position: relative;
 
   .container {
     max-width: 1280px;
+
+    // Override zero font-size for direct text content
+    > h2,
+    > p {
+      font-size: 20px;
+      line-height: 1.2;
+      text-align: center;
+      max-width: 80%;
+      margin: 0 auto 2em;
+      text-wrap: balance;
+    }
+
+    > h2 {
+      font-size: 26px;
+      line-height: 1.2;
+    }
   }
 
   &__container {
@@ -13,10 +28,145 @@
     gap: 30px 0;
     margin: 3px 30px;
     z-index: 1;
+
+    // Mobile-specific adjustments for fullwidth cards
+    @media (max-width: 767px) {
+      &.card__fullwidth {
+        margin: 3px 15px; // Reduced margins for mobile
+        gap: 20px 0; // Reduced gap to prevent overlap
+      }
+    }
+
+    &.card__fullwidth {
+      // Mobile: Single column layout
+      grid-template-columns: 1fr;
+      justify-content: center;
+      margin: 3px 15px; // Reduce side margins on mobile to prevent overflow
+
+      .card {
+        max-height: auto !important;
+        width: 100%; // Ensure card doesn't exceed container
+        box-sizing: border-box; // Include padding in width calculation
+
+        &__body {
+          display: flex;
+          flex-direction: column;
+          text-align: left;
+          padding: 20px; // Uniform padding on mobile
+          box-sizing: border-box; // Include padding in width calculation
+
+          img {
+            width: 100%;
+            margin: 0 0 15px 0; // Slightly reduced bottom margin
+            height: auto;
+            max-width: 100%; // Prevent image overflow
+          }
+
+          // Target the actual content wrapper div (contains card__headline and card__content)
+          > div {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+          }
+
+          .card__headline {
+            text-align: center;
+            margin-left: 0;
+            margin-right: 0;
+            padding-top: 0;
+            h3 {
+              /* text-align: left; */
+              margin-bottom: 10px;
+              margin-top: 0;
+              padding-bottom: 0; // Override default padding
+            }
+          }
+
+          .card__content {
+            text-align: center;
+            padding-bottom: 0;
+            margin-left: 0;
+            margin-right: 0;
+            p {
+              margin-bottom: 1em;
+              /* text-align: left; */
+            }
+
+            ul {
+              list-style-type: disc;
+              padding-left: 0;
+              margin: 0 0 5px 0; // Further reduced bottom margin
+
+              li {
+                text-align: center;
+                list-style: none;
+                padding-left: 0;
+              }
+            }
+          }
+        }
+      }
+
+      // Tablet: 768px+ - Start showing side-by-side layout
+      @media (min-width: 768px) {
+        grid-template-columns: minmax(500px, 700px);
+        margin: 3px 30px; // Restore normal margins on tablet+
+
+        .card {
+          &__body {
+            flex-direction: row;
+            padding: 25px 25px 20px 25px; // Reduced bottom padding
+            gap: 25px;
+            align-items: flex-start;
+
+            .card__headline,
+            .card__content {
+              text-align: left;
+
+              ul {
+                padding-left: 1.5em;
+
+                li {
+                  text-align: left;
+                  list-style-type: disc;
+                  padding-left: unset;
+                }
+              }
+            }
+
+            img {
+              flex: 0 0 60%; // Increased to ~2/3
+              margin: 0;
+            }
+
+            > div {
+              flex: 1; // ~1/3 remaining space
+              display: flex;
+              flex-direction: column;
+            }
+          }
+        }
+      }
+
+      // Desktop: 1024px+
+      @media (min-width: 1024px) {
+        grid-template-columns: minmax(600px, 800px);
+
+        .card {
+          &__body {
+            padding: 30px 30px 25px 30px; // Reduced bottom padding
+            gap: 30px;
+
+            img {
+              flex: 0 0 65%; // Image takes ~2/3
+            }
+          }
+        }
+      }
+    }
   }
 
   .card {
-
     position: relative;
 
     a,
@@ -25,26 +175,24 @@
     }
 
     a {
-
       display: block;
 
       &:hover {
-
         .card__label h6 {
           background: $color-red;
         }
 
         .card__body {
-          box-shadow: 0 3px 15px 2px rgba($color-black, 0.05), 0 1px 1px rgba($color-black, 0.02), 0 0 0 3px $color-red;
+          box-shadow:
+            0 3px 15px 2px rgba($color-black, 0.05),
+            0 1px 1px rgba($color-black, 0.02),
+            0 0 0 3px $color-red;
           transform: translateY(-3px);
         }
-
       }
-
     }
 
     &__label {
-
       position: absolute;
       text-align: center;
       top: -15px;
@@ -52,7 +200,6 @@
       z-index: 1;
 
       h6 {
-
         background: $color-red;
         border-radius: 3px;
         color: $color-white;
@@ -68,7 +215,7 @@
 
         &:after {
           background: url(../images/icon-card.svg) center center no-repeat;
-          content: '';
+          content: "";
           filter: $filter-white;
           height: 9px;
           position: absolute;
@@ -76,20 +223,51 @@
           top: 9px;
           width: 6px;
         }
+      }
+    }
 
+    &__coming-soon {
+      opacity: 0.6;
+
+      a {
+        &:hover {
+          .card__body {
+            box-shadow:
+              0 3px 15px 2px rgba($color-black, 0.05),
+              0 1px 1px rgba($color-black, 0.02),
+              0 0 0 3px rgba($color-black, 0.1);
+            transform: translateY(0);
+          }
+        }
       }
 
+      .card__label {
+        position: relative;
+        h6 {
+          padding: 3px 13px;
+
+          &:after {
+            background: transparent;
+          }
+        }
+      }
     }
 
     &__body {
       align-items: center;
       background: $color-white;
       border-radius: 8px;
-      box-shadow: 0 3px 15px 2px rgba($color-black, 0.05), 0 1px 1px rgba($color-black, 0.02), 0 0 0 3px rgba($color-black, 0.1);
+      box-shadow:
+        0 3px 15px 2px rgba($color-black, 0.05),
+        0 1px 1px rgba($color-black, 0.02),
+        0 0 0 3px rgba($color-black, 0.1);
       display: flex;
       flex-direction: column;
       justify-content: center;
-      transition: background $transition, box-shadow $transition, transform $transition;
+      transition:
+        background $transition,
+        box-shadow $transition,
+        transform $transition;
     }
 
     &__headline,
@@ -100,7 +278,6 @@
     }
 
     &__headline {
-
       padding-bottom: 6px;
       padding-top: 32px;
 
@@ -117,11 +294,9 @@
         text-decoration-thickness: 2px;
         transition: color $transition;
       }
-
     }
 
     &__content {
-
       padding-bottom: 35px;
 
       p {
@@ -134,21 +309,53 @@
         transition: color $transition;
       }
 
-    }
+      ul {
+        font-size: 18px;
+        line-height: 23px;
+        list-style-type: disc;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: left;
 
+        li {
+          color: $color-grey-5;
+          margin-bottom: 0.5em;
+        }
+      }
+    }
   }
 
+  &.padfix {
+    padding-bottom: 80px;
+  }
 
+  @media (min-width: 768px) {
+    &.padfix {
+      padding-bottom: 0;
+    }
+  }
 
-  @media(min-width: 768px) {
-
+  @media (min-width: 768px) {
     &__container {
       grid-template-columns: repeat(2, 1fr);
       gap: 30px;
+
+      &.card__fullwidth {
+        // This is handled in the specific fullwidth section above
+        .card {
+          height: auto; // Override the fixed height for fullwidth cards
+          max-height: none; // Remove max-height constraint
+
+          a,
+          &__body {
+            height: auto; // Override the 100% height
+            position: static; // Override absolute positioning
+          }
+        }
+      }
     }
 
     .card {
-
       height: 30vw;
       max-height: 150px;
 
@@ -157,23 +364,28 @@
         height: 100%;
         position: absolute;
       }
-
     }
-
   }
 
-
-
-  @media(min-width: 1024px) {
-
+  @media (min-width: 1024px) {
     &__container {
       grid-template-columns: repeat(3, 1fr);
       margin-left: 60px;
       margin-right: 60px;
+
+      &.card__fullwidth {
+        // This is handled in the specific fullwidth section above
+        .card {
+          height: auto; // Override the fixed height for fullwidth cards
+          max-height: none; // Remove max-height constraint
+
+          a,
+          &__body {
+            height: auto; // Override the 100% height
+            position: static; // Override absolute positioning
+          }
+        }
+      }
     }
-
   }
-
-
-
 }
